--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -27,13 +27,22 @@ main{
   flex: 1;
 }
 
+.btn-primary {
+  background-color: #f0c040 !important;
+  color: black !important;
+} 
+
+
 .products {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
 }
 
-
+.rating span{
+  color: #ffc000;
+  
+}
 .product{
   border: 1px #404040 solid;
   margin: 1rem;
@@ -44,6 +53,8 @@ main{
   width:100%;
   max-width: 400px;
 }
+
+
 
 .product-info{
   padding: 1rem;
