--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -19,19 +19,18 @@ header a {
   text-decoration: none;
 } */
 
-.site-container{
+.site-container {
   min-height: 100vh;
 }
 
-main{
+main {
   flex: 1;
 }
 
 .btn-primary {
   background-color: #f0c040 !important;
   color: black !important;
-} 
-
+}
 
 .products {
   display: flex;
@@ -39,33 +38,31 @@ main{
   justify-content: center;
 }
 
-.rating span{
+.rating span {
   color: #ffc000;
-  
 }
-.product{
+.product {
   border: 1px #404040 solid;
   margin: 1rem;
-
 }
 
-.product img{
-  width:100%;
+.product img {
+  width: 100%;
   max-width: 400px;
 }
 
-
-
-.product-info{
+.product-info {
   padding: 1rem;
 }
 
-.img-large{
+.img-large {
   max-width: 100%;
 }
 
-.img-thumbnail{
+.img-thumbnail {
   height: 80px !important;
 }
 
-
+.small-container {
+  width: 600px !important;
+}
